--- a/style.css
+++ b/style.css
@@ -57,10 +57,6 @@ td,th{
     width: 50%;
 }
 
-.result{
-    display: grid;
-    place-items: center;
-}
 
 .result p{
     font-size: 20px;
@@ -68,21 +64,27 @@ td,th{
 }
 
 .score,.score2{
-    font-size: 30px;
+    font-size: 20px;
 }
 
 .content-answer{
     border-top: 5px solid black;
-    padding: 50px;
+    padding: 30px;
 }
 
 .result{
     position: fixed;
     right: 0;
-    bottom: 30px;
+    top:0;
+    display: flex;
+    place-items: center;
+    gap: 20px  ;
     background-color: white;
-    border: 2px solid black;
-    padding: 20px;
+    border: 2px solid #000000;
+    padding: 10px;
+    p{
+        margin:10px auto;
+    }
 }
 .btn{
     display: flex;
@@ -92,8 +94,8 @@ td,th{
 .result-btn,
 .result-btn_remove{
     background-color: rgb(150, 143, 143);
-    font-size: 25px;
-    padding: 0 5px;
+    font-size: 20px;
+    padding: 0 15px;
     border: 3px solid black;
     cursor: pointer;
 }
@@ -109,4 +111,25 @@ td,th{
 
 .score{
     display: flex;
+}
+
+@media (max-width : 1024px){
+    body{
+        padding:0;
+        margin: 0;
+    }
+    .test{
+        margin-left:10px;
+        margin-right: 10px;
+    }
+}
+
+.test-right{
+    background-color:rgb(25, 255, 25);
+    /* color: white; */
+}
+
+.test-wrong{
+    background-color:rgb(255, 25, 25);
+    /* color: white; */
 }
