--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ td,th{
 
 .result{
     position: fixed;
-    right: 40%;
-    top:0;
+    right: 0;
+    top:10px;
     display: flex;
     place-items: center;
     gap: 20px  ;
@@ -121,6 +121,9 @@ td,th{
     .test{
         margin-left:10px;
         margin-right: 10px;
+    }
+    .result{
+        width: 100%;
     }
 }
 
